2003-01-04  Kevin Ryde  <user42@zip.com.au>

	* gnus-art.el (gnus-mime-jka-compr-maybe-uncompress): New
	function. 

2003-01-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-exit): Bind gnus-group-is-exiting-p. 
	(gnus-summary-read-group-1): Update group line.
	(gnus-summary-exit-no-update): Update group on exit.

	* gnus-group.el (gnus-group-line-format): Add %*.
	(gnus-group-line-format-alist): Ditto.
	(gnus-group-insert-group-line): Set it.
	(gnus-group-is-exiting-p): New variable.
	(gnus-group-insert-group-line): Use it.

2003-01-03  Teodor Zlatanov  <tzz@beld.net>

	* spam.el (spam-enter-ham-BBDB, spam-BBDB-register-routine):
	enable BBDB ham processing
	(spam-blacklist-register-routine): enable blacklist spam processing
	(spam-whitelist-register-routine): enable whitelist ham processing
	(spam-fetch-field-from-fast): fast fetching of the "from" field
	from (gnus-data-list)
	(spam-summary-prepare-exit): works completely now
	(spam-use-blacklist): oops, should be nil by default

2003-01-03  Jesper Harder  <harder@ifa.au.dk>

	* mml.el (mml-insert-tag): Don't quote non-ASCII unibyte
	characters.

2003-01-02  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-group-spam-contents-p, spam-group-ham-contents-p)
	(spam-group-processor-p, spam-group-processor-bogofilter-p) 
	(spam-group-processor-ifile-p, spam-group-processor-blacklist-p) 
	(spam-group-processor-whitelist-p, spam-group-processor-BBDB-p) 
	(spam-mark-spam-as-expired-and-move-routine) 
	(spam-generic-register-routine, spam-BBDB-register-routine) 
	(spam-ifile-register-routine, spam-blacklist-register-routine) 
	(spam-whitelist-register-routine): new functions
	(spam-summary-prepare-exit): added summary exit processing (expire
	or move) of spam-marked articles for spam groups; added slots for
	all the spam-*-register-routine functions

2003-01-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* pop3.el (pop3-retr): Wait 500 msecs.
	(pop3-read-response): Ditto.
