@@ -1,3 +1,9 @@
+2003-01-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus.el (gnus-variable-list): Write gnus-format-specs last. 
+
+	* gnus-sum.el (gnus-summary-goto-subjects): Fix typo.
+
 2003-01-04  Kevin Ryde  <user42@zip.com.au>
 
 	* gnus-art.el (gnus-mime-jka-compr-maybe-uncompress): New
@@ -25,6 +31,10 @@
 	from (gnus-data-list)
 	(spam-summary-prepare-exit): works completely now
 	(spam-use-blacklist): oops, should be nil by default
+	(spam-summary-prepare-exit): spam-use-PROCESSOR is only for
+	split processing now; before it was for summary exit as
+	well but that's done with the spam-contents and spam-process
+	parameters now
 
 2003-01-03  Jesper Harder  <harder@ifa.au.dk>
 
